# Bookly

./: LICENSE  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
src/: logger.py  main.py
src/api_v1/: __init__.py
src/api_v1/author/: crud.py  dependencies.py  schemas.py  views.py
src/api_v1/book/: crud.py  dependencies.py  schemas.py  views.py
src/api_v1/genre/: crud.py  dependencies.py  schemas.py  views.py
src/api_v1/profile/: crud.py  dependencies.py  schemas.py  views.py
src/api_v1/review/: crud.py  dependencies.py  schemas.py  views.py
src/api_v1/user/: crud.py  dependencies.py  schemas.py  views.py
src/core/: config.py
src/core/models/: __init__.py  author.py  base.py  book.py  book_genre_association_table.py  email_verification_token.py  genre.py  password_reset_token.py  profile.py  review.py  superuser.py  user.py
src/core/models/mixins/: __init__.py  created_at_mixin.py  id_mixin.py
src/mailing/: __init__.py  send_mail.py  send_password_reset_token.py  send_verification_mail.py  send_welcome_mail.py
src/middleware/: register_middleware.py
src/tasks/: __init__.py  celery_conf.py  tasks.py
src/utils/: __init__.py  auth_helpers.py  clean_reset_token.py  clean_verification_token.py  db_helper.py  password_helpers.py  token_helpers.py
