[project]
name = "bookly"
version = "0.1.0"
description = "A simple project for book enthusiasts"
authors = [
    {name = "Ivan Shishkin",email = "ivanshishkin99@bk.ru"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13, <4.0"
dependencies = [
    "asyncpg (>=0.30.0,<0.31.0)",
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "bcrypt (>=4.3.0,<5.0.0)",
    "cryptography (>=45.0.6,<46.0.0)",
    "celery (>=5.5.3,<6.0.0)",
    "flower (>=2.0.1,<3.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "email-validator (>=2.3.0,<3.0.0)",
    "alembic (>=1.16.5,<2.0.0)",
    "httptools (>=0.6.4,<0.7.0)",
    "prometheus-fastapi-instrumentator (>=7.1.0,<8.0.0)",
    "black (>=25.1.0,<26.0.0)",
    "slowapi (>=0.1.9,<0.2.0)",
    "isort (>=6.0.1,<7.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "autoflake (>=2.3.1,<3.0.0)",
    "orjson (>=3.11.3,<4.0.0)",
    "fastapi-cache2[redis] (>=0.2.2,<0.3.0)",
    "pytest (>=8.4.1,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
